<resources>
    <string name="app_name">JK NCC Directorate</string>
    <string name="org_name">JK NCC DIRECTORATE</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Notices">Notices</string>
    <string name="important_links">Important Links</string>
    <string name="username">Enter Email Address</string>
    <string name="password">Enter Password</string>
    <string name="machine">Machine Number</string>

    <string name="aim">Aim</string>
    <string name="song">Song</string>
    <string name="pledge">Pledge</string>
    <string name="jammu">Jammu</string>
    <string name="kashmir">Kashmir</string>
    <string name="home">Home</string>
    <string name="adg">ADG Corner</string>
    <string name="about">About Us</string>
    <string name="org">Organisation</string>
    <string name="coverage">Coverage</string>
    <string name="gallery">Gallery</string>
    <string name="rdc">RDC 2017</string>
    <string name="rti">RTI</string>
    <string name="downloads">Downloads</string>
    <string name="contact">Contact Us</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="feedback">Feedback</string>
    <string name="events">Events</string>
    <string name="staff_links">Staff Links</string>
    <string name="enrollment">Enrollment</string>
    <string name="add_event">Add Event</string>
    <string name="add_gallery">Add Gallery</string>
    <string name="add_notification">Add Notification</string>
    <string name="update">Update Status</string>
    <string name="training">Training Submission</string>
    <string name="social">Social Actvity</string>
    <string name="report">Report</string>
    <string name="report_training">Report Training</string>

    <array name="menu">
        <item>@string/home</item>
        <item>@string/adg</item>
        <item>@string/about</item>
        <item>@string/org</item>
        <item>@string/coverage</item>
        <item>@string/gallery</item>
        <item>@string/rdc</item>
        <item>@string/rti</item>
        <item>@string/downloads</item>
        <item>@string/contact</item>
        <item>@string/disclaimer</item>
        <item>@string/feedback</item>
        <item>@string/events</item>
        <item>@string/staff_links</item>
    </array>

    <string name="contact_us_location">Click to Open Location</string>

    <string name="aim_content1">To develop qualities of character, courage, comradeship, discipline, leadership, secular outlook, spirit of adventure and sportsmanship and the ideals of selfless service among the youth to make them useful citizens.</string>

    <string name="aim_content2">To create a human resource of organised, trained and activated youth, to provide leadership in all walks of life including the Armed Forces and always available for the service of the nation.</string>

    <string name="aim_content3">To create suitable environment to motivate the youth to take up a career in the armed forces.</string>

    <string name="song_content_english">Hum Sab Bharatiya Hain, Hum Sab Bharatiya Hain
\nApni Manzil Ek Hai,\nHa, Ha, Ha, Ek Hai,\nHo, Ho, Ho, Ek Hai.\nHum Sab Bharatiya Hain.
\n\nKashmir Ki Dharti Rani Hai,\nSartaj Himalaya Hai,\nSaadiyon Se Humne Isko Apne Khoon Se Pala Hai\nDesh Ki Raksha Ki Khatir Hum Shamshir Utha Lenge,\nHum Shamshir Utha Lenge.
\n\nBikhre Bikhre Taare Hain Hum Lekin Jhilmil Ek Hai,\nHa, Ha, Ha, Ek Hai\nHum Sab Bharatiya Hai.
\n\nMandir Gurudwaare Bhi Hain Yahan\nAur Masjid Bhi Hai Yahan\nGirija Ka Hai Ghariyaal Kahin\nMullah ki Kahin Hai Ajaan.
\n\nEk Hee Apna Ram Hain, Ek hi Allah Taala Hai,\nEk Hee Allah Taala Hain, Raang Birange Deepak Hain Hum,\nlekin Jagmag Ek Hai,
\n\nHa Ha Ha Ek Hai, Ho Ho Ho Ek Hai.\nHum Sab Bharatiya Hain, Hum Sab Bharatiya Hain.\n
</string>

    <string name="song_content_hindi">हम सब भारतीय हैं, हम सब भारतीय हैं|\nअपनी मंज़िल एक है, हा हा हा एक है, हो हो हो एक है|\nहम सब भारतीय हैं|
\n\nकश्मीर की धरती रानी है, सरताज हिमालय है,\nसदियों से हमने इस को अपने खून से पाला है|\nदेश की रक्षा की खातिर हम शमशीर उठा लेंगे,\nहम शमशीर उठा लेंगे|
\n\nबिखरे-बिखरे तारे हैं हम, लेकिन झिलमिल एक है,\nहा हा हा एक है, हो हो हो एक है,\nहम सब भारतीय है|
\n\nमंदिर, गुरूद्वारे भी हैं यहाँ, और मस्जिद भी है यहाँ,\nिरिजा का है घड़ियाल कहीं मुल्ला की कहीं है अजां|
\n\nएक ही अपना राम हैं, एक ही अल्लाह ताला है,\nएक ही अल्लाह ताला हैं|\nरंग बिरंगे दीपक हैं हम, लेकिन जगमग एक है,
\n\nहा हा हा एक है, हो हो हो एक है|\nहम सब भारतीय हैं, हम सब भारतीय हैं</string>

    <string name="pledge_content1">We the cadets of the national cadet corps, do soloemely pledge that we shall always uphold the unity of india.
    </string>

    <string name="pledge_content2">We resolve to be disciplined and responsible citizens of our nation.
</string>

    <string name="pledge_content3">We shall undertake positive community service in the spirit of selflessness and concern for our fellow beings.
</string>

    <string name="adg_content">Today is a landmark day in the history of NCC Dte J&amp;K, wherein with the launch of NCC Dte J&amp;K Website and Application - the process of automation of enrolment commences.\n
    \n National Cadet Corps is committed to converting youth of our State into responsible citizens. NCC also fosters national integration and communal harmony.\n
    \n The NCC website besides facilitating online enrolment will provide all information regarding NCC training activities viz Camps, Adventure Training, A, B, C Certificate exam schedule, mountaineering, sailing and cycling schedule etc, besides giving out opportunities the NCC offers for career progression with touch of the screen / click.\n
    \n I take this opportunity to appreciate efforts of Brig R Jamwal, Gp Cdr NCC Jammu in conceptualising and finalising the proposal into reality.
</string>

    <string name="rti_content1">NOMINATION OF OFFICERS TO DEAL WITH RTI APPLICATIONS UNDER RTI ACT 2005 OF CENTRAL GOVT AND RTI ACT 2009 OF STATE GOVT OF J&amp;K.
\n\n<i>The following Officers are nominated as Appellate Authority, CPIOs, ACPIOs under the Right to Information Act for matters concerning the National Cadet Corps in J&amp;K :-</i></string>

    <string name="rti_content2"><li>Appellate Authority - ADG (A), HQ DG NCC, New Delhi</li>
\n<li>CPIO - DDG NCC Directorate J&amp;K</li>
\n<li>ACPIOs - Group Cdrs Jammu/Srinagar for respective Groups</li></string>

    <string name="rti_content3"><li>Appellate Authority - Commissioner Cum Secretary,Education Department J&amp;K</li>
\n<li>CPIO - DDG NCC Dte J&amp;K</li>
\n<li>ACPIOs - Group Cdrs Jammu/Srinagar for respective Groups</li></string>


    <string name="disclaimer_content">This is the official android application of NCC Directorate, Jammu and Kashmir.
\nInformation for this app is provided by NCC, Directorate, Jammu and Kashmir.
\nWhile every care has been taken to provide correct and updated information, the NCC Directorate (J&amp;K) or Gaming Dronzz is not responsible for any error/ omission or delay in updating data/information and so on.
\nThe visitors to the site are therefore, requested to contact the NCC Directorate (J&amp;K).
\n\nApplication is developed and maintained by GAMING DRONZZ, Jammu. </string>
</resources>
