<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:paddingTop="@dimen/padding_medium"
    tools:context="com.jknccdirectorate.Fragment.AimFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorBlack">

        </View>
        <com.uncopt.android.widget.text.justify.JustifiedTextView
            android:id="@+id/aim1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLightGray"
            android:fontFamily="serif"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/aim_content1"
            android:textColor="@color/colorBlack"
            android:textSize="17sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"


            android:background="@color/colorBlack">

        </View>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_medium" />
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"


            android:background="@color/colorBlack">

        </View>

        <com.uncopt.android.widget.text.justify.JustifiedTextView
            android:layout_width="match_parent"
            android:id="@+id/aim2"
            android:layout_height="wrap_content"
            android:background="@color/colorLightGray"
            android:fontFamily="serif"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/aim_content2"
            android:textColor="@color/colorBlack"
            android:textSize="17sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"


            android:background="@color/colorBlack">

        </View>
        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_medium" />
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"


            android:background="@color/colorBlack">

        </View>

        <com.uncopt.android.widget.text.justify.JustifiedTextView
            android:layout_width="match_parent"
            android:id="@+id/aim3"
            android:layout_height="wrap_content"
            android:background="@color/colorLightGray"
            android:fontFamily="serif"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/aim_content3"
            android:textColor="@color/colorBlack"
            android:textSize="17sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"


            android:background="@color/colorBlack">

        </View>
    </LinearLayout>
</ScrollView>
